# AI-PARA-TRADING

./: .env.example  .gitignore  EXECUTION_CONFIRMATION_OPTIMIZATION.md  README.md  export_mt5_data.py  pyproject.toml  requirements.txt  run_unleashed_ai.py  start-claude-ollama.ps1  start-claude-openrouter.ps1
.github/workflows/: ai-cloud.yml  (+5 more)
config/: channels.yaml  config.yaml  external_bots.yaml  settings.yaml
docs/: COPY_TRADING_SETUP.md  INTEGRATE_AI_SIGNALS.md  ai_trading_brain_architecture.md  trading_service_platform.md
scripts/: adapt_ai_backtest.py  ai_backtest_realistic.py  ai_integrated_backtest.py  analyze_backtest.py  analyze_execution_decisions.py  audit_reaction_zone_compression_ok.py  auth.ps1  backtest_botjavivi_breakout_expansion_local.py  backtest_botjavivi_strategy_suite_local.py  backtest_ia_itl_poi_local_multiyear.py  backtest_staged.py  backtest_staged_final.py  bootstrap.py  check_datasets.py  check_q_memory.py  client_replicate.py  debug_checklist.py  diagnose_ai.py  diagnose_execution_blocks.py  enhanced_backtest.py  enhanced_final_backtest.py  final_ai_backtest.py  final_ai_verification.py  final_benchmark.py  final_comparison.py  final_integrated_backtest.py  final_pure_ai_backtest.py  final_verification.py  maximo_backtest_realism_audit.py  maximo_multi_year_regime_research.py  monitor_displacement_survival_protocol.py  optimized_backtest_test.py  phase2.ps1  phase3.ps1  port_displacement_plus_wick_fx_research.py  process.ps1  real_ai_backtest.py  realistic_staged.py  rebuild_knowledge.py  repair_mes5_download.py  (+35 more)
src/: __init__.py
(+288 files in other folders)
